<resources>
    <string name="app_name">workaround</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_btnSignUp">Cadastrar</string>
    <string name="imgbtn_worker">worker</string>
    <string name="imgbtn_user">user</string>
    <string name="txt_escolhaPerfil">Escolha seu Perfil</string>
    <string name="txt_worker">Worker</string>
    <string name="txt_usuario">Usuário</string>
    <string name="btn_logout">Sair</string>
    <string name="btn_signUp">criar conta</string>
    <string name="btn_signIn">Entrar</string>

    <string-array name="spin_jobs">
        <item>Mecânico</item>
        <item>Encanador</item>
        <item>Eletricista</item>
        <item>Pedreiro</item>
        <item>Técnico em TI</item>
    </string-array>

    <string name="menu_abrir">Abrir</string>
    <string name="menu_fechar">Fechar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_solicitacoes">Solicitações</string>
    <string name="txt_tituloservico">Serviço</string>
    <string name="hint_titulservico">Nome do serviço (Ex. Consertar torneira)</string>
    <string name="txt_descservico">Descrição do Serviço</string>
    <string name="hint_descservico">Breve descrição sobre o serviço.</string>
    <string name="hint_localervico">Ex. Várzea, Recife, PE</string>
    <string name="txt_localservico">Local do serviço</string>
    <string name="txt_statusservico">Status do serviço</string>
    <string name="txt_btnAvaliar">Avaliar</string>
    <string name="txt_reputacao">Média de Avaliação</string>
</resources>
