<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.ifpe.tads.pdm.faljval.workaround.DetailSolicitacaoActivity">


    <RelativeLayout
        android:id="@+id/solicitacao_det_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulLight"
        android:paddingBottom="12dp">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_solicitacao_avatar" />

        <TextView
            android:id="@+id/worker_solicitacao_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_solicitacao_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/worker_solicitacao_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/inf_solicitacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/solicitacao_det_layout"
        android:paddingTop="4dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_tituloservico"/>

        <TextView
            android:id="@+id/tv_nomeSolicitacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_descservico" />

        <TextView
            android:id="@+id/tv_descSolicitacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_localservico" />

        <TextView
            android:id="@+id/tv_localSolicitacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_statusservico" />

        <TextView
            android:id="@+id/tv_statuSolicitacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/nota_solicitacao"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inf_solicitacao"
        android:numStars="5" />

    <Button
        android:id="@+id/btn_avaliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#6DCDED"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_btnAvaliar"
        android:onClick="btnAvaliarClick"/>
</RelativeLayout>