<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifpe.tads.pdm.faljval.workaround.DetailServiceActivity">

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:elevation="5dp"
        android:padding="10dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_user_avatar" />

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/roxao"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/cliente_service_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_service_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cliente_service_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_layout"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_tituloservico"/>

        <TextView
            android:id="@+id/tv_nomeService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_descservico" />

        <TextView
            android:id="@+id/tv_descService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/txt_localservico" />

        <TextView
            android:id="@+id/tv_localService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/service_Btn_Vermelho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/vermelhoSuave"
            android:text="Rejeitar Serviço" />

        <Button
            android:id="@+id/service_Btn_Verde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/verdeBolado"
            android:text="Aceitar Serviço" />

    </LinearLayout>
</RelativeLayout>
